fix(2fa): modal too wide and error not padded

--- a/src/components/modal/2fa/2fa.module.scss
+++ b/src/components/modal/2fa/2fa.module.scss
@@ -1,19 +1,6 @@
 @import '../../../styles/common/colors.scss';
 
-.error {
-  background: $color-red;
-  color: white;
-  padding: 5px;
-  font-weight: bold;
-  border-radius: 4px;
-  font-size: 14px;
-  line-height: 18px;
-  text-align: center;
-  border: 1px solid $color-text-error;
-  width: 90%;
-  margin: 0 auto;
-
-  p {
-    margin: 0;
-  }
+.two-factor-modal {
+  max-width: 550px;
+  width: 100%;
 }
